Enhancements:
- The Deposit Keep feature for guild banks now also works in reverse. If your funds are below your threshold, then visiting a guild bank will withdraw from the bank instead. (Keep Me Safe still applies for withdraws.)